--- a/front/html/product.html
+++ b/front/html/product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <title>Nom du produit</title>
+    <title class="titlePage"></title>
 
     <meta charset="utf-8">
     <meta name="description" content="Plateforme incroyable de e-commerce">
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet" />
     <link href="../css/product.css" rel="stylesheet" />
+
+    <script defer src="../js/product.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -110,6 +112,5 @@
         </div>
       </div>
     </footer>
-  <script src="../js/product.js"></script>
   </body>
 </html>
