--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -12,6 +12,8 @@
     <link href="../css/style.css" rel="stylesheet" />
     <link href="../css/confirmation.css" rel="stylesheet" />
 
+    <script defer src="../js/confirmation.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -75,6 +77,5 @@
         </div>
       </div>
     </footer>
-  <script src="../js/confirmation.js"></script>
   </body>
 </html>
